Fixed the `PopupTabLayout` background color on high contrast

--- a/styles/colors-highcontrast.scss
+++ b/styles/colors-highcontrast.scss
@@ -31,4 +31,8 @@
 	// Popup
 	// ---------------------------------------
 	--sand-popup-bg-color-rgb: 0, 0, 0;
+
+	// PopupTabLayout
+	// ---------------------------------------
+	--sand-popup-scrimtransparent-bg-color: var(--sand-overlay-bg-color-rgb-base);
 }
